--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -5,3 +5,46 @@
   box-sizing: border-box;
   margin: 0 auto;
 }
+
+@mixin btn($bg: $red, $two-button: false){
+  width: 225px;
+  // height: 56px;
+  border-radius: 3px;
+  background-color: $bg;
+  border: 2px solid $bg;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16px;
+  padding: 18px 0;
+  letter-spacing: 0.14px;
+  text-decoration: none;
+  display: inline-block;
+  text-align: center;
+  text-transform: uppercase;
+  color: $white;
+  box-sizing: border-box;
+  transition-duration: 500ms;
+  transition-property: background-color, border-color;
+  @content;
+
+  &:hover{
+    background-color: darken($red, 10%);
+    border-color: darken($red, 10%);
+  }
+
+  @if $two-button == true{
+    &:firstchild{
+      margin-right: 25px;
+    }
+    &:last-child{
+      background-color: transparent;
+      border-color: $white;
+    }
+    &:hover{
+      &:last-child{
+        border-color: $red;
+      }
+    }
+  }
+}
