--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -48,3 +48,40 @@
     }
   }
 }
+
+@mixin devider($color-line: $white-gray){
+  display: block;
+  width: 7px;
+  position: relative;
+  margin: 20px auto;
+
+  p{
+    text-align: center;
+
+    &::after{
+      content: "";
+      width: 7px;
+      height: 7px;
+      background-color: $red;
+      display: block;
+      border-radius: 50%;
+    }
+  }
+
+  &::after, &::before{
+    content: "";
+    width: 80px;
+    height: 1px;
+    background-color: $color-line;
+    display: block;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-1px);
+  }
+  &::before{
+    left: -90px;
+  }
+  &::after{
+    right: -90px;
+  }
+}
