--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,3 +9,5 @@
 @import "blocks/section-top.scss";
 @import "blocks/menu.scss";
 @import "blocks/buttons.scss";
+@import "blocks/devider.scss";
+@import "blocks/section-wrap.scss";
