--- a/scss/blocks/buttons.scss
+++ b/scss/blocks/buttons.scss
@@ -5,3 +5,17 @@
         @include btn($bg: $red, $two-button: true);
     }
 }
+
+
+@media (max-width: 560px){
+ .buttons {
+     a {
+         display: block;
+         margin: 10px auto;
+
+         &:first{
+             margin: 15px auto;
+         }
+     }
+ }   
+}
