--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,3 +11,4 @@
 @import "blocks/buttons.scss";
 @import "blocks/devider.scss";
 @import "blocks/section-wrap.scss";
+@import "blocks/advantages.scss";
