--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,3 +13,4 @@
 @import "blocks/section-wrap.scss";
 @import "blocks/advantages.scss";
 @import "blocks/history.scss";
+@import "blocks/service.scss";
