--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,3 +15,5 @@
 @import "blocks/history.scss";
 @import "blocks/service.scss";
 @import "blocks/recent.scss";
+@import "blocks/case-study.scss";
+@import "blocks/ideas.scss";
