--- a/scss/blocks/blog.scss
+++ b/scss/blocks/blog.scss
@@ -1,6 +1,7 @@
 .blog {
     background-color: $white-gray;
     padding: 140px 0;
+    border-top: 1px solid #d8d9db;
 
     p {
         font-size: 14px;
@@ -22,4 +23,109 @@
         font-weight: 700;
         text-transform: uppercase;
     }
+
+    .blog__block {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 1920px;
+        margin: 60px auto 0;
+    }
+
+    .blog__element {
+        display: flex;
+        flex-basis: 50%;
+        flex-wrap: wrap;
+    }
+
+    .blog__element--reverse {
+        .blog__img {
+            order: 2;
+        }
+
+        .blog__text {
+            order: 1;
+
+            &::before {
+            border-right: 30px solid transparent;
+            border-left: 25px solid $red;
+            left: auto;
+            right: -55px;
+          }
+        }
+    }
+    
+    .blog__img {
+        flex-basis: 50%;
+
+        img {
+            display: block;
+            max-width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    .blog__text {
+        flex-basis: 50%;
+        padding: 25px 25px 25px 40px;
+        background-color: $red;
+        box-sizing: border-box;
+        position: relative;
+
+        &::before {
+            content: "";
+            border: 30px solid transparent;
+            border-right: 25px solid $red;
+            position: absolute;
+            top: 50%;
+            left: -55px;
+            transform: translateY(-50%);
+        }
+
+        p {
+            font-size: 16px;
+            line-height: 30px;
+            color: $white;
+            text-align: left;
+            margin: 15px 0;
+        }
+
+        .blog__category {
+            font-size: 14px;
+            letter-spacing: 0.7px;
+        }
+
+        .blog__name {
+            font-size: 24px;
+            letter-spacing: 1.2px;
+            font-family: "Source Sans Pro";
+            font-weight: 600;
+            text-transform: uppercase;
+
+            &::after {
+                content: "";
+                width: 44px;
+                height: 4px;
+                background-color: $white;
+                display: block;
+                margin-top: 15px;
+            }
+        }
+
+        a {
+            color: $white;
+            text-decoration: none;
+            font-size: 18px;
+            line-height: 24px;
+            font-weight: 600;
+            font-style: italic;
+            display: inline-block;
+            margin: 20px 0;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+    
 }
