HTML-структура для блока с формой

--- a/scss/blocks/blog.scss
+++ b/scss/blocks/blog.scss
@@ -190,7 +190,7 @@
 @media (max-width: 580px) {
     .blog {
         .blog__element {
-            &:nth-child(odd), &nth-child(even) {
+            &:nth-child(odd), &:nth-child(even) {
                 .blog__img {
                     order: 1;
                     flex-basis: 100%;
