--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,3 +24,5 @@
 @import "blocks/blog.scss";
 @import "blocks/keep.scss";
 @import "blocks/free.scss";
+@import "blocks/footer.scss";
+@import "blocks/socials.scss";
