--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import "fonts";
 @import "mixins";
 @import "core";
+@import "animations";
 
 @import "blocks/section-top.scss";
 @import "blocks/menu.scss";
@@ -26,3 +27,4 @@
 @import "blocks/free.scss";
 @import "blocks/footer.scss";
 @import "blocks/socials.scss";
+@import "blocks/arrow-up.scss"
